Fix old print statement.

--- a/scipy/basic/session2a.tex
+++ b/scipy/basic/session2a.tex
@@ -332,7 +332,7 @@ In []: t = [0.90, 1.19, 1.30,
 of elements
 
 \begin{lstlisting}
-In []: print len(L), len(t)
+In []: print(len(L), len(t))
 \end{lstlisting}
 
 \end{frame}
