Fix tiny error in session3 slide.
Also add a section to quickref on imshow/imread/colorbar.

--- a/scipy/basic/quickref.tex
+++ b/scipy/basic/quickref.tex
@@ -276,6 +276,13 @@ def f(y, t):
 
 {\ex \typ{data = csv2rec('data.csv')}} from csv to record array
 
+\hr\textbf{Basic image processing}
+
+{\ex \typ{from pylab import imread, imshow, colorbar}}\\
+{\ex \typ{a = imread('lena.png')}}: a is a NumPy array\\
+{\ex \typ{imshow(a)}}\\
+{\ex \typ{colorbar()}}\\
+
 \hr\textbf{3D plotting with Mayavi's \typ{mlab}}
 
 {\ex \typ{from mayavi import mlab}}  Ready to Go!\\
