--- a/scipy/basic/session3.tex
+++ b/scipy/basic/session3.tex
@@ -533,7 +533,7 @@ This is what our intention is.
 
 Or
 
-\[T_sq = A \cdot p \]
+\[T_{sq} = A \cdot p \]
 
 \end{frame}
 
@@ -648,6 +648,7 @@ In []: img = random.random(
   ...: )
 In []: clf()
 In []: imshow(img)
+In []: colorbar()
 \end{lstlisting}
 \end{frame}
 
