Update slide title.

--- a/scipy/basic/session4.tex
+++ b/scipy/basic/session4.tex
@@ -78,7 +78,7 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Title page
-\title[Basic SciPy and Mayavi]{Introductory Scientific Computing with
+\title[Basic SciPy]{Introductory Scientific Computing with
 Python}
 \subtitle{Basic SciPy}
 
