--- a/scipy/basic/notebook.tex
+++ b/scipy/basic/notebook.tex
@@ -253,6 +253,7 @@ In []: %matplotlib
 
 \begin{frame}[fragile]
   \frametitle{Using matplotlib}
+  \small
   \begin{lstlisting}
 In []: %matplotlib
 In []: from matplotlib import pyplot as plt
@@ -295,6 +296,7 @@ In []: plt.plot(x, sin(x))
 \begin{frame}
   \frametitle{Exercise}
   \begin{itemize}
+  \item Start the notebook
   \item Create a new notebook
   \item Try the interface tour (Help->Interface tour)
   \item Add some markdown text, an image, and a simple equation
