Update the mlab slides.

--- a/scipy/basic/lists_arrays.tex
+++ b/scipy/basic/lists_arrays.tex
@@ -75,7 +75,7 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Title page
-\title[Interactive Plotting]{Introductory Scientific Computing with
+\title[Lists and Arrays]{Introductory Scientific Computing with
 Python}
 \subtitle{More plotting, lists and numpy arrays}
 
