--- a/scipy/basic/numpy.tex
+++ b/scipy/basic/numpy.tex
@@ -75,9 +75,9 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Title page
-\title[Interactive Plotting]{Introductory Scientific Computing with
+\title[NumPy arrays]{Introductory Scientific Computing with
 Python}
-\subtitle{Numpy arrays}
+\subtitle{NumPy arrays}
 
 \author[FOSSEE] {FOSSEE}
 
