--- a/scipy/basic/prelims.tex
+++ b/scipy/basic/prelims.tex
@@ -84,7 +84,7 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Title page
-\title[Introduction]{Introductory Scientific Computing with
+\title[Preliminaries]{Introductory Scientific Computing with
 Python}
 \subtitle{Some preliminaries}
 
