--- a/scipy/basic/saving_scripts.tex
+++ b/scipy/basic/saving_scripts.tex
@@ -68,7 +68,7 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Title page
-\title[Interactive Plotting]{Introductory Scientific Computing with
+\title[Saving scripts]{Introductory Scientific Computing with
 Python}
 \subtitle{Saving scripts}
 
